Update Button Get My CV

--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
 
                     <div class="s-footer__buttons">
                         <a href="mailto:bintangfathehah@gmail.com" class="btn btn--primary u-fullwidth">Say Hello</a>
-                        <a href="images/CV ATS.pdf" class="btn btn--stroke u-fullwidth">Get My CV</a>
+                        <a href="images/CV ATS.pdf" class="btn btn--stroke u-fullwidth">My CV</a>
                     </div>
 
                     </p>
