--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                                 <div class="timeline__header">
                                     <h4 class="timeline__title">Kelompok Penyelenggara Pemungutan Suara (KPPS)</h4>
                                     <h5 class="timeline__meta">Komisi Pemungutan Umum (KPU) (Part Time)</h5>
-                                    <p class="timeline__timeframe">Sep 2023 - Feb 2024</p>
+                                    <p class="timeline__timeframe">Jan 2024 - Feb 2024</p>
                                 </div>
                                 <div class="timeline__desc">
                                     <ul>
@@ -720,7 +720,7 @@
 
                     <div class="s-footer__buttons">
                         <a href="mailto:bintangfathehah@gmail.com" class="btn btn--primary u-fullwidth">Say Hello</a>
-                        <a href="images/CV ATS.pdf" class="btn btn--stroke u-fullwidth">Get My CV</a>
+                        <a href="images/CV-Muhammad Bintang Fathehah.pdf" class="btn btn--stroke u-fullwidth">Get My CV</a>
                     </div>
 
                     </p>
