--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
     
                         <p class="attention-getter animate-on-load">
                             Hi, my name is Muhammad Bintang Fathehah and you can call me Bintang. I am a Fresh Graduate from the 
-                            D-3 Informatics Engineering Study Program at the Politeknik Negeri Banjarmasin. I have a strong interest in information technology, especially in web programming and 
-                            computer networks. I am very enthusiastic to continue learning and developing in both of these areas. 
+                            D-3 Informatics Engineering Study Program at the Politeknik Negeri Banjarmasin. I have a strong interest in Information Technology, especially in Web Programming and 
+                            Computer Networks. I am very enthusiastic to continue learning and developing in both of these areas. 
                             I am always ready to take on new challenges and dig deeper into my knowledge to achieve higher levels 
                             of excellence.
                         </p>
