Fix Data Management Staff Description in Certification Section

--- a/index.html
+++ b/index.html
@@ -367,11 +367,16 @@
                                 </div>
                                 <div class="timeline__desc">
                                     <ul>
-                                        <li>Planning brand research and sales predictions</li>
-                                        <li>Developing sales, marketing, and product promotion plans</li>
-                                        <li>Addressing customer information needs through various communication channels</li>
-                                        <li>Designing creative advertising strategies and advertising planning</li>
-                                        <li>Utilizing design software, web browsers, email, and social media</li>
+                                        <li>Competent in the use of computer devices and operating systems.</li>
+                                        <li>Proficient in using peripheral equipment.</li>
+                                        <li>Able to operate presentation software at level base.</li>
+                                        <li>Skilled in running a website browser (Web browser).</li>
+                                        <li>Experienced in using mail access software electronic (email client).</li>
+                                        <li>Proficient in using social media applications.</li>
+                                        <li>Skilled in the use of word processing software on advanced level.</li>
+                                        <li>Skilled in the use of level worksheet software carry on.</li>
+                                        <li>Expert in data entry.</li>
+                                        <li>Competent in identifying aspects of information security user.</li>
                                     </ul>
                                 </div>
                             </div>
