Update CV and Project Description

--- a/index.html
+++ b/index.html
@@ -561,7 +561,12 @@
                             <h4 class="folio-item__title">SIMAGANG-POLIBAN</h4>
                         </div>
                         <div class="folio-item__caption">
-                            <p>SIMAGANG or Sistem Informasi Magang is a system created to manage all student internship administration activities from the time the student applies for an internship until the internship activity is completed.</p>
+                            <p>This project is my final assignment project at POLIBAN and the aim of this system is
+                                Manage all student internship administration activities from the moment the student applies
+                                place of internship until internship activities are completed within the specific scope of the D-3
+                                Informatics Engineering only. The system was built using the CodeIgniter framework with views
+                                frontend uses AdminLTE bootstrap template. To date, SIMAGANG has
+                                used by POLIBAN to simplify the internship administration process.</p>
                         </div>
                     </div>
                 </div> <!-- end column -->
@@ -581,7 +586,11 @@
                             <h4 class="folio-item__title">Kotalama Koffie</h4>
                         </div>
                         <div class="folio-item__caption">
-                            <p>SIKOLA Coffee or Sistem Informasi Kota Lama Coffee is an information system that manages the operations of the coffee industry in Kota Lama. The main focus is inventory management, employee attendance, and daily income reporting. Additional features include customer data collection, where every 5 transactions customers get 1 free, as well as a landing page that allows users to scan a QR and access the Kotalama Koffie coffee menu directly.</p>
+                            <p>SIKOLA (Sistem Kopi Kota Lama) is an information system that manages coffee industry operations in the city
+                                Long. The main focus is inventory management, employee attendance, transaction activities, and
+                                daily income reporting. This system also has a landing page that displays everything
+                                the menu at Kota Lama Koffie. The system was built using the Laravel framework
+                                the frontend display uses the QuixLab bootstrap template.</p>
                         </div>
                     </div>
                 </div> <!-- end column -->
