Edit About Me Description, JNA Certification Files, and CV Files

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <h1 class="s-intro__text-huge animate-on-load">
                             Bintang
                         </h1>
-                        <h3 class="animate-on-load">Web Developer <span>+</span> Network Administrator</h3>
+                        <h5 class="animate-on-load">A Fresh Graduate exploring career opportunities with enthusiasm.</h5>
                     </div>
 
                     <div class="s-intro__bg"></div>
@@ -134,11 +134,12 @@
                         <h2 class="text-pretitle animate-on-load">About Me</h2>
     
                         <p class="attention-getter animate-on-load">
-                            Hi, my name is Muhammad Bintang Fathehah and you can call me Bintang. I am a Fresh Graduate from the 
-                            D-3 Informatics Engineering Study Program at the Politeknik Negeri Banjarmasin. I have a strong interest in Information Technology, especially in Web Programming and 
-                            Computer Networks. I am very enthusiastic to continue learning and developing in both of these areas. 
-                            I am always ready to take on new challenges and dig deeper into my knowledge to achieve higher levels 
-                            of excellence.
+                            Hi, my name is Muhammad Bintang Fathehah and you can call me Bintang. I am a fresh graduate from the D-3 Informatics Engineering Study Program at Politeknik Negeri Banjarmasin with
+                            High interest in information technology, particularly in web programming and computer networks. However, so do I
+                            someone who is flexible and ready to accept new challenges outside that field. I have the enthusiasm to continue
+                            learn and develop in various fields. I am ready to take on new challenges and am always eager to dig in
+                            deeper into my knowledge. I believe that my edge lies in my ability to solve
+                            problems, working in a team, and adapting quickly to new work environments.
                         </p>
                     </div>
                 </div>
