Update UMKM Internship Date & Description

--- a/index.html
+++ b/index.html
@@ -173,21 +173,17 @@
                                 <div class="timeline__header">
                                     <h4 class="timeline__title">UMKM Doyan Ngemil</h3>
                                     <h5 class="timeline__meta">Digital Marketing Specialist (Internship)</h5>
-                                    <p class="timeline__timeframe">Sep 2022 - Mar 2023</p>
+                                    <p class="timeline__timeframe">Sep 2022 - Jan 2023</p>
                                 </div>
                                 <div class="timeline__desc">
-                                    <p>Digitizing UMKM Doyan Ngemil, namely creating:</p>
                                     <ul>
-                                        <li>Business Model Canvas (BMC)</li>
-                                        <li>Promotional Images</li>
-                                        <li>Packaging Design</li>
-                                        <li>Copywriting</li>
-                                        <li>Google Sites</li>
-                                        <li>Instagram Business</li>
-                                        <li>Email Client</li>
-                                        <li>Google Business</li>
-                                        <li>Logo</li>
-                                        <li>Website (WordPress)</li>
+                                        <li>Responsible for creating Business Model Canvas (BMC), promotional images
+                                            attractive, creative packaging design, and writing content that attracts customers.</li>
+                                        <li>Involved in the introduction and management of digital platforms such as Google Sites, Google
+                                            Business, Instagram Business, and email clients to expand your reach and
+                                            increase online presence.</li>
+                                        <li>Contribute to the development of a logo that reflects the brand identity and
+                                            creation of a responsive website using the WordPress platform.</li>
                                     </ul>
                                 </div>
                             </div>
