--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
                             <div class="timeline__block">
                                 <div class="timeline__bullet"></div>
                                 <div class="timeline__header">
-                                    <h4 class="timeline__title">SIMAGANG Development and Administrative Role</h4>
-                                    <h5 class="timeline__meta">System Developer (Part Time)</h5>
+                                    <h4 class="timeline__title">System Developer SIMAGANG POLIBAN</h4>
+                                    <h5 class="timeline__meta">Politeknik Negeri Banjarmasin (Part Time)</h5>
                                     <p class="timeline__timeframe">Sep 2023 - Feb 2024</p>
                                 </div>
                                 <div class="timeline__desc">
@@ -209,9 +209,12 @@
                                 </div>
                                 <div class="timeline__desc">
                                     <ul>
-                                        <li>Responsible for asking each voter to sign the attendance registration form in accordance with the information contained in the voter list for their area.</li>
+                                        <li>Responsible for the process of organizing voting on election day,
+                                            including careful preparation and completion of assignments.</li>
                                         <li>Designing a banner for the purposes of holding voting.</li>
-                                        <li>Counting votes with and being involved in reporting election results via the SIREKAP application</li>
+                                        <li>Ensure the election process runs smoothly, counting votes carefully
+                                            and involved in reporting election results to relevant agencies in accordance with procedures
+                                            applicable</li>
                                     </ul>
                                 </div>
                             </div>
