Update CV, About Me & Some Description in Certification

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <h1 class="s-intro__text-huge animate-on-load">
                             Bintang
                         </h1>
-                        <h5 class="animate-on-load">A Fresh Graduate exploring career opportunities with enthusiasm.</h5>
+                        <h5 class="animate-on-load">Exploring career opportunities with enthusiasm in the field of Information Technology.</h5>
                     </div>
 
                     <div class="s-intro__bg"></div>
@@ -134,7 +134,7 @@
                         <h2 class="text-pretitle animate-on-load">About Me</h2>
     
                         <p class="attention-getter animate-on-load">
-                            Hi, my name is Muhammad Bintang Fathehah and you can call me Bintang. I am a fresh graduate from the D-3 Informatics Engineering Study Program at Politeknik Negeri Banjarmasin with
+                            Hi, my name is Muhammad Bintang Fathehah and you can call me Bintang. I am a graduate from the D-3 Informatics Engineering Study Program at Politeknik Negeri Banjarmasin with
                             High interest in information technology, particularly in web programming and computer networks. However, so do I
                             someone who is flexible and ready to accept new challenges outside that field. I have the enthusiasm to continue
                             learn and develop in various fields. I am ready to take on new challenges and am always eager to dig in
