Update Another Reference - Ahmad Yusuf

--- a/index.html
+++ b/index.html
@@ -627,6 +627,8 @@
                             <div class="testimonial-slider__slide swiper-slide">
                                 <p>
                                     Based on my experience and observations, Muhammad Bintang Fathehah, can be an example of a student who has a high commitment to studying at D3 Informatics Engineering, Politeknik Negeri Banjarmasin. This can be seen from the pattern he showed during lectures and carrying out his Final Assignment. He has good cooperation, high self-confidence, and masters various knowledge, especially in the field of Software Development.
+                                    <br>
+                                    Meanwhile, we appreciate he's Final Project which contributes to the Study Program, namely SIMAGANG POLIBAN. He's ability to work in a team and make a meaningful contribution is extraordinary.
                                 </p>
                                 <div class="testimonial-slider__author">
                                     <img src="images/avatars/user-09.jpg" alt="Author image" class="testimonial-slider__avatar">
